--- a/css/main.css
+++ b/css/main.css
@@ -15,14 +15,21 @@ p {
 }
 p a {
   /* text-decoration: underline */
-  color: #008AFF;
+  color: #00B4A1; /* #008AFF; */
 }
-h1,h2,h3,h4,h5,h6 {
+h1,h2 {
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-weight: 800;
+  font-weight: 500;
+  color: rgb(0, 180, 161);  /* the green #00B4A1 */
+}
+
+h3,h4,h5,h6 {
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  color: rgb(0, 180, 161);
 }
 a {
-  color: #008AFF;
+  color: rgb(0, 180, 161); /* #008AFF; */
 }
 a:hover,
 a:focus {
@@ -97,7 +104,8 @@ img {
 /* --- Navbar --- */
 
 .navbar-custom {
-  background: #F5F5F5;
+/*  background: #F5F5F5;*/
+  background: rgb(0, 180, 161);
   border-bottom: 1px solid #EAEAEA;
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
@@ -111,7 +119,7 @@ img {
 .navbar-custom .navbar-brand,
 .navbar-custom .nav li a {
   font-weight: 800;
-  color: #404040;
+  color: /* #000000; */  #303030; 
 }
 
 .navbar-custom .navbar-brand:hover,
@@ -238,28 +246,33 @@ img {
 
 footer {
   padding: 30px 0;
-  background: #F5F5F5;
+/*  background: #F5F5F5;*/
+  background: rgb(0, 180, 161);
   border-top: 1px #EAEAEA solid;
   margin-top: 50px;
   font-size: 14px;
 }
 
 footer a {
-  color: #404040;
+  font-weight: 800;
+  color: /* #000000; */  #303030; 
 }
 
 footer .list-inline {
   margin: 0;
   padding: 0;
+  color: /* #000000; */  #303030;
 }
 footer .copyright {
   font-family: Open Sans;
   text-align: center;
   margin-bottom: 0;
+  color: /* #000000; */  #303030; 
 }
 footer .theme-by {
   text-align: center;
   margin: 10px 0 0;
+  color: /* #000000; */  #303030;
 }
 
 @media only screen and (min-width: 768px) {
@@ -588,12 +601,14 @@ table tr td :last-child {
 /* --- Code blocks --- */
 
 pre {
-  font-size: 16px;
+  font-size: 14px;
   line-height: 1.5em;
 }
+
 pre code {
   white-space: pre;
 }
+/*
 pre.highlight, .highlight > pre, td.code pre {
   background: #FAFAFA;
   background-image: linear-gradient(#F9F9F9 50%, #FDFDFD 50%);
@@ -602,6 +617,8 @@ pre.highlight, .highlight > pre, td.code pre {
   background-position: 0px 10px;
   border-left: 7px solid #444;
 }
+
+*/
 code table, code table td, code table th, code table tbody, code table tr,
 td.gutter pre {
   padding: 0;
