--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,7 @@ body {
 p {
   line-height: 1.5;
   margin: 30px 0;
+  text-align: justify;
 }
 p a {
   /* text-decoration: underline */
@@ -267,12 +268,15 @@ footer .copyright {
   font-family: Open Sans;
   text-align: center;
   margin-bottom: 0;
-  color: /* #000000; */  #303030; 
+  color: #FFFFFF; /* #000000; */  #303030; 
 }
 footer .theme-by {
   text-align: center;
   margin: 10px 0 0;
-  color: /* #000000; */  #303030;
+  color: #FFFFFF; /* #000000; */  #303030;
+}
+footer .theme-by a {
+  color: #FFFFFF; /* #000000; */  #303030;
 }
 
 @media only screen and (min-width: 768px) {
