--- a/css/main.css
+++ b/css/main.css
@@ -18,15 +18,19 @@ p a {
   /* text-decoration: underline */
   color: #00B4A1; /* #008AFF; */
 }
-h1,h2 {
+h1 {
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-weight: 500;
+  font-weight: 300;
   color: rgb(0, 180, 161);  /* the green #00B4A1 */
 }
-
+h2 {
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-weight: 400;
+  color: rgb(0, 180, 161);  /* the green #00B4A1 */
+}
 h3,h4,h5,h6 {
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-weight: 500;
+  font-weight: 400;
   color: rgb(0, 180, 161);
 }
 a {
@@ -120,7 +124,7 @@ img {
 .navbar-custom .navbar-brand,
 .navbar-custom .nav li a {
   font-weight: 800;
-  color: /* #000000; */  #303030; 
+  color: #FFFFFF; /* #000000; */  #303030; 
 }
 
 .navbar-custom .navbar-brand:hover,
@@ -205,6 +209,9 @@ img {
   width: 100%;
   display: none;
   word-break: break-word;
+}
+.navbar-custom .nav .navlinks-children a {
+color: #000000;
 }
 .navbar-custom .nav .navlinks-container .navlinks-children a {
   display: block;
