--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -7,8 +7,9 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{{ site.url }}">{{ site.title }}</a>
-    </div>
+<!--       remove navbar-brand to remove name in order to put photo on left
+ --><!--       <a class="navbar-brand" href="{{ site.url }}">{{ site.title }}</a>
+ -->    </div>
 
     <div class="collapse navbar-collapse" id="main-navbar">
       <ul class="nav navbar-nav navbar-right">
