--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ p a {
 }
 h1 {
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-weight: 300;
+  font-weight: 500;
   color: rgb(0, 180, 161);  /* the green #00B4A1 */
 }
 h2 {
@@ -153,7 +153,8 @@ img {
   -webkit-transition: opacity 0.5s ease-in-out;
   -moz-transition: opacity 0.5s ease-in-out;
   transition: opacity 0.5s ease-in-out;
-  left: 50%;
+  /* left: 50%; */ 
+  left: 55px; /* to put the avatar on left of the header */
   width: 50px;
   margin-top: -25px;
 }
@@ -427,7 +428,7 @@ footer .theme-by a {
 }
 .intro-header .page-heading h1 {
   margin-top: 0;
-  font-size: 50px;
+  font-size: 60px;
 }
 .intro-header .post-heading h1 {
   margin-top: 0;
@@ -480,7 +481,7 @@ footer .theme-by a {
     padding: 150px 0;
   }  
   .intro-header .page-heading h1 {
-    font-size: 80px;
+    font-size: 60px;
   }
   .intro-header .post-heading h1 {
     font-size: 50px;
