update button -- created class button-primary in aboutme.css

--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -34,3 +34,43 @@
 #contact-form .form-control {
   margin-bottom: 15px;
 }
+
+.button {
+    padding: 14px 24px;
+    border: 0 none;
+    font-size: 16px;
+    font-weight: normal;
+    white-space: nowrap;
+    vertical-align: middle;
+    border: 1px solid transparent;
+    border-radius: 4px;
+}
+ 
+.button:focus, .button:active:focus, .button.active:focus {
+    outline: 0 none;
+}
+ 
+.button-primary {
+    background: #00B4A1;
+    color: #ffffff;
+}
+ 
+.button-primary:hover, .button-primary:focus, .button-primary:active, .button-primary.active, .open > .dropdown-toggle.button-primary {
+    background: #0085a1;
+}
+ 
+.button-primary:active, .button-primary.active {
+    background: #00B4A1;
+    box-shadow: none;
+}
+
+.button-primary.raised {
+  box-shadow: 0 3px 0 0 #00B4A1;
+}
+
+.button-primary.raised:active, .button-primary.raised.active {
+  background: #018274;
+  box-shadow: none;
+  margin-bottom: -3px;
+  margin-top: 3px;
+}
