--- a/css/main.css
+++ b/css/main.css
@@ -664,3 +664,15 @@ td.gutter {
     margin: 0 auto;
     display: block;
 }
+
+
+/* lists */
+
+/*UL {
+  List-Style-Type: "\203A"; 
+  color: #00B4A1;
+  }
+UL UL {
+  List-Style-Type: circle;
+  }
+*/
