--- a/css/main.css
+++ b/css/main.css
@@ -53,6 +53,7 @@ hr.small {
   border-width: 4px;
   border-color: inherit;
   border-radius: 3px;
+  color: #00B4A1;
 }
 
 .main-content {
@@ -655,3 +656,24 @@ td.gutter {
 #social-share-section {
   margin-bottom: 30px;
 }
+
+
+/* centering images */
+
+.center-image
+{
+    margin: 0 auto;
+    display: block;
+}
+
+
+/* lists */
+
+/*UL {
+  List-Style-Type: "\203A"; 
+  color: #00B4A1;
+  }
+UL UL {
+  List-Style-Type: circle;
+  }
+*/
