--- a/MLcourse/css/style.css
+++ b/MLcourse/css/style.css
@@ -41,3 +41,37 @@ pre {
 pre code {
   white-space: inherit;
 }
+
+
+.book .book-summary ul.summary li a:hover, .book .book-summary ul.summary li.active > a {
+    color: #fffff8; /*#008cff;*/
+    background: #cd0050;
+    text-decoration: none;
+}
+
+/* so that before and after aren't treated the same as the toc, because why would they? */
+.book .book-summary ul.summary li.before a {
+  color: #cd0050;
+  text-decoration: none;
+  font-size: 125%;
+  font-variant: small-caps;
+  font-weight: 500;
+}
+
+
+/* so that before and after aren't treated the same as the toc, because why would they? */
+.book .book-summary ul.summary li.beforeimg a {
+  background-color: transparent;
+}
+
+
+.book .book-summary ul.summary li.before a:hover,
+.book .book-summary ul.summary li.before li.active>a {
+  color: #fffff8;  /*#6197D5*/
+  background-color: 0 0;
+  text-decoration: none;
+}
+
+h1, h2, h3, h4, h5 {
+  color:#cd0050;
+}
