--- a/MLcourse/css/style.css
+++ b/MLcourse/css/style.css
@@ -27,6 +27,10 @@
 p.caption {
   color: #777;
   margin-top: 10px;
+  font-style: italic;
+  margin-right: 10%;
+  margin-left: 10%;  
+  text-align: center;
 }
 p {
   text-align: justify;
@@ -42,6 +46,25 @@ pre code {
   white-space: inherit;
 }
 
+.book .book-summary {
+    position: absolute;
+    font-family: "Open Sans", 'Helvetica Neue', Roboto, sans-serif;
+    top: 0;
+    left: -300px;
+    bottom: 0;
+    z-index: 1;
+    width: 300px;
+    border-right: 1px solid rgba(0,0,0,.07);
+    -webkit-transition: left 250ms ease;
+    -moz-transition: left 250ms ease;
+    -o-transition: left 250ms ease;
+    transition: left 250ms ease;
+}
+
+/* nav/menu area */
+.book .book-summary ul.summary li a, .book .book-summary ul.summary li span {
+    padding: 8px 25px;
+}
 
 .book .book-summary ul.summary li a:hover, .book .book-summary ul.summary li.active > a {
     color: #fffff8; /*#008cff;*/
@@ -74,4 +97,41 @@ pre code {
 
 h1, h2, h3, h4, h5 {
   color:#cd0050;
+}
+
+
+.btn:hover, .btn:focus, .btn.focus, .btn:active, .btn.active, .open>.dropdown-toggle.btn-success {
+    color: #f4f7f7;
+    background-color: #cd0050;
+    border-color: #cd0050;
+    border-radius: 6px;
+}
+
+.btn {
+    padding: 9px 14px;
+    font-size: 19px;
+    font-family: "Fira Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+    line-height: 1.3333333;
+    border-radius: 6px;
+}
+
+.btn:focus,
+.btn:active,
+.btn.active {
+    outline: 0;
+    border-radius: 6px;
+}
+
+.btn-success:hover, .btn-success:focus, .btn-success.focus, .btn-success:active, .btn-success.active, .open>.dropdown-toggle.btn-success {
+    color: #f4f7f7;
+    background-color: #cd0050;
+    border-color: #cd0050;
+    border-radius: 6px;
+}
+
+.btn-lg, .btn-group-lg>.btn {
+    padding: 9px 14px;
+    font-size: 19px;
+    line-height: 1.3333333;
+    border-radius: 6px;
 }
