--- a/Statistique_inferentielle/css/style.css
+++ b/Statistique_inferentielle/css/style.css
@@ -56,8 +56,6 @@ pre code {
     bottom: 0;
     z-index: 1;
     width: 300px;
-    color: #364149;  /**/
-    background: *#cd0050; /*#f5f5f540;*/ /* #eaf5fb;  #d9edf7#bdcadb #3572D9 #fafafa*/
     border-right: 1px solid rgba(0,0,0,.07);
     -webkit-transition: left 250ms ease;
     -moz-transition: left 250ms ease;
@@ -67,26 +65,20 @@ pre code {
 
 /* nav/menu area */
 .book .book-summary ul.summary li a, .book .book-summary ul.summary li span {
-    color: #fffff8; /*#364149;*/ /**/
-    padding: 8px 25px;
+    padding: 8px 15px;
 }
 
+
 .book .book-summary ul.summary li a:hover, .book .book-summary ul.summary li.active > a {
-    color: #00b4a1; /*#fffff8;*/ /*#008cff;*/
-    background: #fffff8; /*#00b4a1;*/ /*#fffff8;*/ /*#cd0050;*/
+    color: #fffff8; /*#008cff;*/
+    background: #00b4a1;
     text-decoration: none;
 }
 
-/* part */
-.book .book-summary ul.summary li span {
-    cursor: not-allowed;
-    opacity: .5;
-    filter: alpha(opacity=30);
-}
 
 /* so that before and after aren't treated the same as the toc, because why would they? */
 .book .book-summary ul.summary li.before a {
-  color: #fffff8; /*#cd0050;*/
+  color: #00b4a1; /*#cd0050;*/
   text-decoration: none;
   font-size: 125%;
   font-variant: small-caps;
@@ -102,7 +94,7 @@ pre code {
 
 .book .book-summary ul.summary li.before a:hover,
 .book .book-summary ul.summary li.before li.active>a {
-  color: #00b4a1;  /*#fffff8;*/  /*#6197D5*/
+  color: #fffff8;  /*#6197D5*/
   background-color: 0 0;
   text-decoration: none;
 }
@@ -227,6 +219,3 @@ div.theorem, div.definition {
     border-radius: 6px;
 }
 
-span.search-highlight {
-    background-color: #cd0050;
-}
