--- a/MLcourse/css/style.css
+++ b/MLcourse/css/style.css
@@ -230,3 +230,35 @@ div.theorem, div.definition {
 span.search-highlight {
     background-color: #00b4a1;
 }
+
+
+/* -----------div tips------------- */
+
+div.puzzle, div.fyi, div.demo, div.note {
+    padding: 1em;
+    margin: 1em 0;
+    padding-left: 100px;
+    background-size: 70px;
+    background-repeat: no-repeat;
+    background-position: 15px center;
+    min-height: 120px;
+    color: #1f5386;
+    background-color: #bed3ec;
+    border: solid 5px #dfedff;
+  }
+  
+div.puzzle {
+  background-image: url("../img/icons/Your-turn.png");
+}
+
+div.fyi {
+ background-image: url("../img/icons/fyi.png");
+}
+
+div.demo {
+  background-image: url("../img/icons/Live-code.png");
+}
+
+div.note {
+  background-image: url("../img/icons/lightbulb.png");
+}
