--- a/MLcourse/css/style.css
+++ b/MLcourse/css/style.css
@@ -15,6 +15,26 @@
 .rmdtip {
   background-image: url("../img/icons/tip.png");
 }
+
+div.rmdcaution, div.rmdinsight, div.rmdexercise, div.rmdtip, div.rmdnoicon {
+  padding: 1em 1em 1em 4em;
+  margin-bottom: 10px;
+  background: #f5f5f5 5px center/3em no-repeat;
+  }
+div.rmdcaution {
+  background-image: url("../img/icons/caution.png");
+}
+div.rmdinsight {
+  background-image: url("../img/icons/insight.png");
+}
+div.rmdexercise {
+  background-image: url("../img/icons/exercise.png");
+}
+div.rmdtip {
+  background-image: url("../img/icons/tip.png");
+}
+
+
 .kable_wrapper {
   border-spacing: 20px 0;
   border-collapse: separate;
