--- a/MLcourse/css/style.css
+++ b/MLcourse/css/style.css
@@ -16,8 +16,13 @@
   background-image: url("../img/icons/tip.png");
 }
 
-div.rmdcaution, div.rmdinsight, div.rmdexercise, div.rmdtip, div.rmdnoicon {
+div.rmdcaution, div.rmdinsight, div.rmdexercise, div.rmdtip {
   padding: 1em 1em 1em 4em;
+  margin-bottom: 10px;
+  background: #f5f5f5 5px center/3em no-repeat;
+  }
+div.rmdnoicon {
+  padding: 1em 1em 1em 1em;
   margin-bottom: 10px;
   background: #f5f5f5 5px center/3em no-repeat;
   }
@@ -251,34 +256,16 @@ span.search-highlight {
     background-color: #00b4a1;
 }
 
+/*From https://yongfu.name/Rmd_ref/#16_printing_bookdown_to_pdf
+To print the pdf from the html browser*/
 
-/* -----------div tips------------- */
-
-div.puzzle, div.fyi, div.demo, div.note {
-    padding: 1em;
-    margin: 1em 0;
-    padding-left: 100px;
-    background-size: 70px;
-    background-repeat: no-repeat;
-    background-position: 15px center;
-    min-height: 120px;
-    color: #1f5386;
-    background-color: #bed3ec;
-    border: solid 5px #dfedff;
+@media print {
+  div.level1 { 
+    page-break-before: always;}
+  img {
+    display: block;
   }
-  
-div.puzzle {
-  background-image: url("../img/icons/Your-turn.png");
-}
-
-div.fyi {
- background-image: url("../img/icons/fyi.png");
-}
-
-div.demo {
-  background-image: url("../img/icons/Live-code.png");
-}
-
-div.note {
-  background-image: url("../img/icons/lightbulb.png");
+  img, table, ul, ol, .code-snippet, blockquote, pre {
+      page-break-inside: avoid;
+  }
 }
