--- a/Statinf/css/style.css
+++ b/Statinf/css/style.css
@@ -18,6 +18,7 @@
 
 div.rmdcaution, div.rmdinsight, div.rmdexercise, div.rmdtip {
   padding: 1em 1em 1em 4em;
+  margin-top: 10px;
   margin-bottom: 10px;
   background: #f5f5f5 5px center/3em no-repeat;
   }
