--- a/Statinf/css/style.css
+++ b/Statinf/css/style.css
@@ -146,6 +146,7 @@ h1 {
 
 
 div.theorem, div.definition {
+    margin-bottom: 10px;
     padding-left: 20px;
     padding-top: 18px;
     padding-bottom: 18px;
