--- a/Statinf/css/style.css
+++ b/Statinf/css/style.css
@@ -160,7 +160,7 @@ div.theorem, div.definition {
     /*text-indent: 23px; */   
 }
 
-div.exercise {
+div.exercise, div.example {
     padding: 1em 1em 1em 1em;
     margin-bottom: 10px;
     background: #f5f5f5 5px center/3em no-repeat;
