--- a/Statinf/css/style.css
+++ b/Statinf/css/style.css
@@ -337,3 +337,19 @@ To print the pdf from the html browser*/
     -o-transform: rotate(315deg);
     transform: rotate(315deg);
 }
+
+
+iframe {
+    margin-bottom: 10px;
+    padding-left: 20px;
+    padding-top: 18px;
+    padding-bottom: 18px;
+    padding-right: 10px;
+    /*background-color: #dadada;*/
+    border: 1px solid #ccc;
+    border-color: #00b4a1; /*#cd0050;*/
+    /*border-bottom: 1px solid #ccc;*/ 
+    border-radius: 5px;    
+    /*margin: 5px;*/ 
+    /*text-indent: 23px; */   
+}
