--- a/Complement_probabilites_statistique/css/style.css
+++ b/Complement_probabilites_statistique/css/style.css
@@ -71,14 +71,14 @@ pre code {
 
 .book .book-summary ul.summary li a:hover, .book .book-summary ul.summary li.active > a {
     color: #fffff8; /*#008cff;*/
-    background: #00b4a1;
+    background: #cf1052;
     text-decoration: none;
 }
 
 
 /* so that before and after aren't treated the same as the toc, because why would they? */
 .book .book-summary ul.summary li.before a {
-  color: #00b4a1; /*#cd0050;*/
+  color: #cf1052; /*#cd0050;*/ /* my green color #cf1052*/
   text-decoration: none;
   font-size: 125%;
   font-variant: small-caps;
@@ -100,14 +100,14 @@ pre code {
 }
 
 h1, h2, h3, h4, h5 {
-  color:#00b4a1 ; /*#cd0050;*/
+  color:#cf1052 ; /*#cd0050;*/
 }
 h1 { 
-  border-bottom: 2px solid #00b4a1
+  border-bottom: 2px solid #cf1052
 }
 
 h2 { 
-  border-bottom: 1px solid #00b4a1
+  border-bottom: 1px solid #cf1052
 }
 
 div.theorem, div.definition {
@@ -117,7 +117,7 @@ div.theorem, div.definition {
     padding-right: 10px;
     /*background-color: #dadada;*/
     border: 1px solid #ccc;
-    border-color: #00b4a1; /*#cd0050;*/
+    border-color: #cf1052; /*#cd0050;*/
     /*border-bottom: 1px solid #ccc;*/ 
     border-radius: 5px;    
     /*margin: 5px;*/ 
@@ -131,7 +131,7 @@ div.exercise {
     padding-right: 10px;
     /*background-color: #dadada;*/
     border-bottom: 1px solid #ccc;
-    border-color: #00b4a1; /*#cd0050;*/
+    border-color: #cf1052; /*#cd0050;*/
     /*border-bottom: 1px solid #ccc;*/     
     /*margin: 5px;*/ 
     /*text-indent: 23px; */   
@@ -153,7 +153,7 @@ div.exercise {
   color: #fffff8;
   border-radius: 25px 25px 0px 0px;
   border-bottom: 0px;
-  background: #00b4a1;
+  background: #cf1052;
   font-size: 28pt;
   line-height: 65px;
   font-family: "Fira Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -167,7 +167,7 @@ div.exercise {
   margin: 0;
   padding-left: 20px;
   padding-bottom: 0em;
-  color: #00b4a1;
+  color: #cf1052;
   background: #f4f7f7;
   font-size: 18pt;
   font-style: normal;
@@ -184,7 +184,7 @@ div.exercise {
   font-style: normal;
   border-radius: 0px 0px 25px 25px;
   padding-left: 20px;
-  color: #00b4a1;
+  color: #cf1052;
   background: #f4f7f7;
   font-family: "Fira Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
@@ -200,8 +200,8 @@ div.exercise {
 
 .btn:hover, .btn:focus, .btn.focus, .btn:active, .btn.active, .open>.dropdown-toggle.btn-success {
     color: #f4f7f7;
-    background-color: #00b4a1;
-    border-color: #00b4a1;
+    background-color: #cf1052;
+    border-color: #cf1052;
     border-radius: 6px;
 }
 
@@ -222,8 +222,8 @@ div.exercise {
 
 .btn-success:hover, .btn-success:focus, .btn-success.focus, .btn-success:active, .btn-success.active, .open>.dropdown-toggle.btn-success {
     color: #f4f7f7;
-    background-color: #00b4a1;
-    border-color: #00b4a1;
+    background-color: #cf1052;
+    border-color: #cf1052;
     border-radius: 6px;
 }
 
