--- a/Statinf/css/style.css
+++ b/Statinf/css/style.css
@@ -80,8 +80,6 @@ pre code {
     bottom: 0;
     z-index: 1;
     width: 300px;
-    color: #364149;  /**/
-    background: #00b4a1; /*#f5f5f540;*/ /* #eaf5fb;  #d9edf7#bdcadb #3572D9 #fafafa*/
     border-right: 1px solid rgba(0,0,0,.07);
     -webkit-transition: left 250ms ease;
     -moz-transition: left 250ms ease;
@@ -91,13 +89,12 @@ pre code {
 
 /* nav/menu area */
 .book .book-summary ul.summary li a, .book .book-summary ul.summary li span {
-    color: #fffff8; /*#364149;*/ /**/
     padding: 8px 25px;
 }
 
 .book .book-summary ul.summary li a:hover, .book .book-summary ul.summary li.active > a {
-    color: #00b4a1; /*#fffff8;*/ /*#008cff;*/
-    background: #fffff8; /*#00b4a1;*/ /*#fffff8;*/ /*#cd0050;*/
+    color: #fffff8; /*#008cff;*/
+    background: #cf1052;
     text-decoration: none;
 }
 
@@ -116,7 +113,7 @@ pre code {
 
 /* so that before and after aren't treated the same as the toc, because why would they? */
 .book .book-summary ul.summary li.before a {
-  color: #fffff8; /*#cd0050;*/
+  color: #cf1052;
   text-decoration: none;
   font-size: 125%;
   font-variant: small-caps;
@@ -132,18 +129,22 @@ pre code {
 
 .book .book-summary ul.summary li.before a:hover,
 .book .book-summary ul.summary li.before li.active>a {
-  color: #00b4a1;  /*#fffff8;*/  /*#6197D5*/
+  color: #fffff8;  /*#fffff8;*/  /*#6197D5*/
   background-color: 0 0;
   text-decoration: none;
 }
 
 h1, h2, h3, h4, h5 {
-  color:#00b4a1 ; /*#cd0050;*/
+  color:#cf1052 ; /*#cd0050;*/
 }
 h1 { 
-  border-bottom: 2px solid #00b4a1
+  border-bottom: 2px solid #cf1052
 }
 
+
+h2 { 
+  border-bottom: 1px solid #cf1052
+}
 
 div.theorem, div.definition {
     margin-bottom: 10px;
@@ -153,7 +154,7 @@ div.theorem, div.definition {
     padding-right: 10px;
     /*background-color: #dadada;*/
     border: 1px solid #ccc;
-    border-color: #00b4a1; /*#cd0050;*/
+    border-color: #cf1052; /*#cd0050;*/
     /*border-bottom: 1px solid #ccc;*/ 
     border-radius: 5px;    
     /*margin: 5px;*/ 
@@ -170,7 +171,7 @@ div.exercise, div.example {
     padding-right: 10px;
     /*background-color: #dadada;*/
     border: 1px solid #ccc;  
-    border-color: #00b4a1; /*#cd0050;*/
+    border-color: #cf1052; /*#cd0050;*/
     /*margin: 5px;*/ 
     /*text-indent: 23px; */   
 }
@@ -192,7 +193,7 @@ div.exercise, div.example {
   color: #fffff8;
   border-radius: 25px 25px 0px 0px;
   border-bottom: 0px;
-  background: #00b4a1;
+  background: #cf1052;
   font-size: 28pt;
   line-height: 65px;
   font-family: "Fira Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -206,7 +207,7 @@ div.exercise, div.example {
   margin: 0;
   padding-left: 20px;
   padding-bottom: 0em;
-  color: #00b4a1;
+  color: #cf1052;
   background: #f4f7f7;
   font-size: 18pt;
   font-style: normal;
@@ -223,7 +224,7 @@ div.exercise, div.example {
   font-style: normal;
   border-radius: 0px 0px 25px 25px;
   padding-left: 20px;
-  color: #00b4a1;
+  color: #cf1052;
   background: #f4f7f7;
   font-family: "Fira Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
@@ -239,8 +240,8 @@ div.exercise, div.example {
 
 .btn:hover, .btn:focus, .btn.focus, .btn:active, .btn.active, .open>.dropdown-toggle.btn-success {
     color: #f4f7f7;
-    background-color: #00b4a1;
-    border-color: #00b4a1;
+    background-color: #cf1052;
+    border-color: #cf1052;
     border-radius: 6px;
 }
 
@@ -261,8 +262,8 @@ div.exercise, div.example {
 
 .btn-success:hover, .btn-success:focus, .btn-success.focus, .btn-success:active, .btn-success.active, .open>.dropdown-toggle.btn-success {
     color: #f4f7f7;
-    background-color: #00b4a1;
-    border-color: #00b4a1;
+    background-color: #cf1052;
+    border-color: #cf1052;
     border-radius: 6px;
 }
 
@@ -347,7 +348,7 @@ iframe {
     padding-right: 10px;
     /*background-color: #dadada;*/
     border: 1px solid #ccc;
-    border-color: #00b4a1; /*#cd0050;*/
+    border-color: #cf1052; /*#cd0050;*/
     /*border-bottom: 1px solid #ccc;*/ 
     border-radius: 5px;    
     /*margin: 5px;*/ 
