--- a/MLcourseEfrei/mycss.css
+++ b/MLcourseEfrei/mycss.css
@@ -7,6 +7,11 @@
   font-size: .725rem;
 }
 
+.sidebar-item .chapter-number {
+  color: #fff;
+  font-weight: bold;
+}
+
 .nav-page .nav-page-text, .sidebar-navigation .sidebar-section .sidebar-item {
   font-size: .675rem;
 }
