--- a/courses/Probas/mycss.css
+++ b/courses/Probas/mycss.css
@@ -40,44 +40,32 @@
 } */
 
 
-
-
-
-details {
-    border: 1px solid #d00751;
-    border-radius: 4px;
-    padding: .5em .5em 0;
-    cursor: default;
+div.theorem, div.definition {
+  padding-left: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-right: 10px;
+  /*background-color: #dadada;*/
+  border: 1px solid #ccc;
+  border-color: #077BBF ;
+  /*border-bottom: 1px solid #ccc;*/ 
+  border-radius: 5px;    
+  margin: 5px; 
+  margin-bottom: 10px;
+  /*text-indent: 23px; */   
 }
 
-summary {
-    font-weight: bold;
-    margin: -.5em -.5em 0;
-    padding: .5em;
-}
-
-details[open] {
-    padding: .5em;
-}
-
-details[open] summary {
-    border-bottom: 1px solid #d00751;
-    margin-bottom: .5em;
-}
-
-details>summary {
+div.exercise {
+  padding-left: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-right: 10px;
+  /*background-color: #dadada;*/
+  border-bottom: 1px solid #ccc;
+  border-color: #077BBF; 
+  /*border-bottom: 1px solid #ccc;*/     
+  margin: 5px; 
+  /*text-indent: 23px; */  
+  margin-bottom: 10px;
  
-  list-style: none;
-}
-summary::-webkit-details-marker {
-  display: none
-}
-
-summary::after {
-  content: ' ►';
-  color: firebrick;
-}
-details[open] summary:after {
-  content: " ▼";
-  color: firebrick;
 }
